kustomize/apps/spc.eu/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hbvu
  name: spceu
  labels:
    app: spceu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spceu
  template:
    metadata:
      labels:
        app: spceu
    spec:    
      containers:
      - name: spceu
        image: nginx
        resources:
          requests:
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"        
        ports:
          - containerPort: 80
            name: "spceu"
        volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: nginx-storage
      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: spc.eu-files
