kustomize/apps/spc.eu/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hbvu
  name: home-hbvu
spec:
  selector:
    app: home-hbvu
  ports:
    - protocol: TCP
      port: 80
      name: http
