kustomize/apps/spc.eu/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spceu
  namespace: hbvu
spec:
  ingressClassName: nginx
  rules:
    - host: spceu.hbvu.local
      http:
        paths:
          - path: /           
            pathType: Prefix
            backend:
              service:
                name: spceu
                port:
                  number: 80
